# academiahumanify

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_PLAN.md  CLAUDE.md  FRONTEND.md  HANDOFF.md  HOW_TO_RUN.md  Makefile  PROGRESS.md  README.md  SETUP.md  environment.yml  models.toml  pyproject.toml
app/: __init__.py  config.py
app/core/: protection.py
app/eval/: __init__.py  evaluate.py  judge.py
app/llm/: __init__.py  base.py  catalog.py  factory.py  ollama.py  openai_compat.py  stub.py
app/pipeline/: base.py  changelog.py  claims.py  rewrite.py  segment.py  stylometry.py  verify.py
app/prompts/: __init__.py  registry.py
app/services/: __init__.py  comparison.py  orchestrator.py
prompts/fewshot/: biology.v1.md  cs.v1.md  physics.v1.md  social_science.v1.md
prompts/system/: judge.v1.md  rewrite.v1.md
prompts/system/intensity/: balanced.v1.md  conservative.v1.md  enhanced.v1.md
prompts/system/style/: formal_conservative.v1.md  modern_interdisciplinary.v1.md
scripts/: compare.py  demo.py
tests/: test_catalog.py  test_changelog.py  test_claims.py  test_comparison.py  test_config.py  test_eval.py  test_judge.py  test_llm.py  test_orchestrator.py  test_prompts.py  test_protection.py  test_rewrite.py  test_segment.py  test_stylometry.py  test_verify.py
